refactor layout and styles for improved responsiveness and organization

--- a/home.html
+++ b/home.html
@@ -26,39 +26,49 @@
         <section class="img">
             <img src="img/header.png" alt="section">
         </section>
-        <div class="container">
-            <div class="Business">
-                <h3>Business</h3>
-                <div class="grid">
-                    <div class="grid"></div>
-                        <div class="grid-item">
-                            <img src="img/VR.jpg" class="VR" alt="Virtual Reality">
-                            <p>Virtual Reality</p>
-                        </div>
-                        <div class="grid-item">
-                            <img src="img/urban.png" class="UD" alt="Urban Design">
-                            <p>Urban Design</p>
-                        </div>
-                        <div class="grid-item">
-                            <img src="img/wear.jpg" class="W" alt="Wearables">
-                            <p>Wearables</p>
-                        </div>
-                    </div>
-                </div>
+
+        <h3>Business</h3>
+        <section class="categories">
+                        <div class="category">
+                <img src="img/drone.jpg" alt="Drones">
+                <span>Drones</span>
             </div>
-            <div class="browse-all">
-                <h2>Browse All</h2>
-                <ul>
-                    <li>Art</li>
-                    <li>Design</li>
-                    <li>Spaces</li>
-                    <li>Architecture</li>
-                    <li>More</li>
-                </ul>
+            <div class="category">
+                <img src="img/VR.jpg" alt="Virtual Reality">
+                <span>Virtual Reality</span>
             </div>
-        </div>
+            <div class="category">
+                <img src="img/urban.png" alt="Urban Design">
+                <span>Urban Design</span>
+            </div>
+            <div class="category">
+                <img src="img/wear.jpg" alt="Wearables">
+                <span>Wearables</span>
+            </div>
+        </section>
+        <h3>Culture</h3>
+        <section class="categories">
+            <div class="category">
+                <img src="img/art.jpg" alt="Art">
+                <span>Art</span>
+            </div>
+            <div class="category">
+                <img src="img/design.jpeg" alt="Design">
+                <span>Design</span>
+            </div>
+            <div class="category">
+                <img src="img/space.jpeg" alt="Spaces">
+                <span>Spaces</span>
+            </div>
+            <div class="category">
+                <img src="img/Arch.jpg" alt="Architecture">
+                <span>Architecture</span>
+            </div>
+        </section>
+        <button class="more-btn">More</button>
+    
         <footer>
-            <p class="left">2012-2017 Techblog</p>
+            <p class="left">&copy; 2012-2017 Techblog</p>
             <p class="right">About | Terms | Privacy Policy</p>
         </footer>
     </body>
