update home page title and restructure layout for Ayotech Blog; enhance styles for header, navigation, and categories

--- a/home.html
+++ b/home.html
@@ -3,73 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Techblog</title>
+    <title>Ayotech Blog</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <!DOCTYPE html>
-    <html lang="en">
 </head>
-    <body>
-        <header>
-            <h1>TECHBLOG</h1>
-            <nav>
-                <a href="#">Business</a>
-                <a href="#">Culture</a>
-                <a href="#">Design</a>
-                <a href="#">Transportation</a>
-            </nav>
-            <div class="search">
-                <input type="text" placeholder="Search">
-                <button>Q</button>
-            </div>
-        </header>
-        <section class="img">
-            <img src="img/header.png" alt="section">
-        </section>
+<body>
+    <header>
+        <h1>AYOTECH BLOG</h1>
+        <nav>
+            <a href="#business">Business</a>
+            <a href="#culture">Culture</a>
+            <a href="#">Design</a>
+            <a href="#">Transportation</a>
+        </nav>
+        <div class="search"></div>
+            <input type="text" placeholder="Search">
+            <button>Q</button>
+        </div>
+    </header>
 
-        <h3>Business</h3>
-        <section class="categories">
-                        <div class="category">
-                <img src="img/drone.jpg" alt="Drones">
-                <span>Drones</span>
-            </div>
-            <div class="category">
-                <img src="img/VR.jpg" alt="Virtual Reality">
-                <span>Virtual Reality</span>
-            </div>
-            <div class="category">
-                <img src="img/urban.png" alt="Urban Design">
-                <span>Urban Design</span>
-            </div>
-            <div class="category">
-                <img src="img/wear.jpg" alt="Wearables">
-                <span>Wearables</span>
-            </div>
-        </section>
-        <h3>Culture</h3>
-        <section class="categories">
-            <div class="category">
-                <img src="img/art.jpg" alt="Art">
-                <span>Art</span>
-            </div>
-            <div class="category">
-                <img src="img/design.jpeg" alt="Design">
-                <span>Design</span>
-            </div>
-            <div class="category">
-                <img src="img/space.jpeg" alt="Spaces">
-                <span>Spaces</span>
-            </div>
-            <div class="category">
-                <img src="img/Arch.jpg" alt="Architecture">
-                <span>Architecture</span>
-            </div>
-        </section>
-        <button class="more-btn">More</button>
-    
-        <footer>
-            <p class="left">&copy; 2012-2017 Techblog</p>
-            <p class="right">About | Terms | Privacy Policy</p>
-        </footer>
-    </body>
-    </html>
+    <section class="img"></section>
+        <img src="img/header.png" alt="section">
+    </section>
+
+    <!-- Business Section -->
+    <h3 id="business">Business</h3>
+    <section class="categories">
+        <div class="category">
+            <img src="img/drone.jpg" alt="Drones">
+            <span>Drones</span>
+        </div>
+        <div class="category">
+            <img src="img/VR.jpg" alt="Virtual Reality">
+            <span>Virtual Reality</span>
+        </div>
+        <div class="category">
+            <img src="img/urban.png" alt="Urban Design">
+            <span>Urban Design</span>
+        </div>
+        <div class="category">
+            <img src="img/wear.jpg" alt="Wearables">
+            <span>Wearables</span>
+        </div>
+    </section>
+
+    <!-- Culture Section -->
+    <h3 id="culture">Culture</h3>
+    <section class="categories">
+        <div class="category">
+            <img src="img/art.jpg" alt="Art">
+            <span>Art</span>
+        </div>
+        <div class="category">
+            <img src="img/design.jpeg" alt="Design">
+            <span>Design</span>
+        </div>
+        <div class="category">
+            <img src="img/space.jpeg" alt="Spaces">
+            <span>Spaces</span>
+        </div>
+        <div class="category">
+            <img src="img/Arch.jpg" alt="Architecture">
+            <span>Architecture</span>
+        </div>
+    </section>
+
+    <button class="more-btn">More</button>
+
+    <footer>
+        <p class="left">&copy; 2025 Ayotech Blog</p>
+        <p class="right">About | Terms | Privacy Policy</p>
+    </footer>
+</body>
+</html>
