update home page title and logo; adjust header padding and footer copyright text

--- a/home.html
+++ b/home.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayotech Blog</title>
+    <title>Techblog</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>AYOTECH BLOG</h1>
+        <a href="/home.html"><img class="logo" src="img/Ayotech Logo.jpg" alt="logo"></a>
         <nav>
             <a href="#business">Business</a>
             <a href="#culture">Culture</a>
@@ -18,7 +18,7 @@
         </nav>
         <div class="search"></div>
             <input type="text" placeholder="Search">
-            <button>Q</button>
+            <buttonbutton type="submit" class="search-button" title="Search"></button><img src="img/search.png" alt="search" style="width: 15px; height: 15px;"></button>
         </div>
     </header>
 
@@ -71,7 +71,7 @@
     <button class="more-btn">More</button>
 
     <footer>
-        <p class="left">&copy; 2025 Ayotech Blog</p>
+        <p class="left">&copy; 2025 Ayotech</p>
         <p class="right">About | Terms | Privacy Policy</p>
     </footer>
 </body>
