fix button markup and adjust more button styles for better layout

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         </nav>
         <div class="search"></div>
             <input type="text" placeholder="Search">
-            <buttonbutton type="submit" class="search-button" title="Search"></button><img src="img/search.png" alt="search" style="width: 15px; height: 15px;"></button>
+            <button type="submit" class="search-button" title="Search"></button><img src="img/search.png" alt="search" style="width: 15px; height: 15px;"></button>
         </div>
     </header>
 
@@ -68,7 +68,7 @@
         </div>
     </section>
 
-    <button class="more-btn">More</button>
+    <button class="more-btn">More</section></button>
 
     <footer>
         <p class="left">&copy; 2025 Ayotech</p>
